[package]
name = "cryptools"
version = "0.12.0"
authors = ["scoobybejesus <scoobybejesus@users.noreply.github.com>"]
edition = "2018"
description = "Command-line utility for processing cryptocurrency transactions into 'lots' and 'movements'."

[features]
# The default optional package. Many people will want to use this feature,
# but it is optional because Windows doesn't support it.
default = ["print_menu"]

print_menu = ["tui", "termion"]

[[bin]]
name = "cryptools"
path = "src/main.rs"

[workspace]

[dependencies]
crptls = { path = "crptls" }
csv = "1.3.0"
decimal = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
structopt = "0.2.10"
rustyline = "12.0.0"
tui = { version = "0.8", optional = true, features = ['termion'] }
termion = { version = "1.5", optional = true }
dotenv = "0.15.0"

[profile.release]
lto = true
