[package]
name = "cryptools"
version = "0.12.4"
authors = ["scoobybejesus <scoobybejesus@users.noreply.github.com>"]
edition = "2021"
description = "Command-line utility for processing cryptocurrency transactions into 'lots' and 'movements'."

[features]
# The default optional package. Many people will want to use this feature,
# but it is optional because Windows doesn't support it.
default = ["print_menu"]

print_menu = ["tui", "termion"]

[[bin]]
name = "cryptools"
path = "src/main.rs"

[workspace]

[dependencies]
crptls = { path = "crptls" }
csv = "1.3.0"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
chrono = { version = "0.4.31", features = ["serde"] }
structopt = "0.2.10"
rustyline = "12.0.0"
tui = { version = "0.8", optional = true, features = ['termion'] }
termion = { version = "2.0.1", optional = true }
dotenv = "0.15.0"

[profile.release]
lto = true
