[package]
name = "crptls"
version = "0.2.0"
authors = ["scoobybejesus <scoobybejesus@users.noreply.github.com>"]
edition = "2018"

[dependencies]
decimal = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.189"
time = "0.3.30"