[package]
name = "crptls"
version = "0.2.2"
authors = ["scoobybejesus <scoobybejesus@users.noreply.github.com>"]
edition = "2021"

[dependencies]
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.189"
time = "0.3.30"